--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "socket.io": "^4.7.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -25,7 +26,6 @@
     "@types/node": "^20.10.0",
     "@types/pg": "^8.11.10",
     "@types/uuid": "^9.0.6",
-    "tsx": "^4.6.0",
-    "typescript": "^5.3.2"
+    "tsx": "^4.6.0"
   }
 }
