--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,26 @@
-[phases.setup]
-nixPkgs = ["nodejs-18_x"]
+# nixpacks.toml
+
+[variables]
+NPM_CONFIG_PRODUCTION = "false"
+NPM_CONFIG_OMIT = ""
+NPM_CONFIG_FUND = "false"
+NPM_CONFIG_AUDIT = "false"
 
 [phases.install]
-cmds = ["npm ci"]
+cmds = [
+  "node -v",
+  "npm -v",
+
+  # Явно ставим devDeps (tsc нужен для build)
+  "npm ci --include=dev --no-audit --no-fund"
+]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = [
+  # Проверка, что tsc реально есть
+  "npx --no-install tsc -v",
+  "npm run build"
+]
 
 [start]
 cmd = "npm run start"
