--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,6 +5,7 @@ NPM_CONFIG_PRODUCTION = "false"
 NPM_CONFIG_OMIT = ""
 NPM_CONFIG_FUND = "false"
 NPM_CONFIG_AUDIT = "false"
+NIXPACKS_PATH = "/opt/nixpacks"
 
 [phases.install]
 cmds = [
